# boggler-flask

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  board.py  boot-dev.sh  boot.sh  compose.yaml  main.py  pyproject.toml  requirements.txt  root.py  uwsgi.service
app/: __init__.py  board.py  models.py  schema.sql
app/board/: __init__.py
app/data/: load_dictionary.py  schema.sql
app/db/: __init__.py  load_dictionary.py  schema.sql
app/static/css/: base.css  board.css  board_options.css  table.css
app/static/datatables/: datatables.css  datatables.js  datatables.min.css  datatables.min.js
app/static/js/: header.js  solved.js  solver.js  words_table.js
app/templates/: base.html  loading.html  rules.html  solved.html  solver.html
app/templates/components/: board.html  board_options.html  flash.html  solved_board.html  words_table.html
app/templates/errors/: 404.html
app/templates/pages/: solved.html  solved_boards.html  solver.html
celery_worker/: __init__.py
cfg/: boggler.env  config-nginx.conf  config-uwsgi.ini  default_nginx.conf  docker.env  nginx.conf  production_nginx.conf
config/: __init__.py
data/: README.md
data/wordlists/dwyl/: prefix4.txt
data/wordlists/free_scrabble/: words_i.txt  words_o.txt  words_y.txt  words_z.txt
data/wordlists/scrabble_2019/: prefix3.txt  words_e.txt  words_h.txt
data/wordlists/sowpods/: words_b.txt  words_g.txt  words_k.txt  words_s.txt  words_x.txt  words_z.txt
data/wordlists/twl06/: words_c.txt  words_d.txt  words_l.txt
data/wordlists/wordnik_2021_07_29/: words_m.txt  words_p.txt  words_u.txt
requirements/: base.txt  docker.txt
static/css/: board.css  words_table.css
static/css/bootstrap/: custom-boostrap.css
static/js/: solved.js  solver.js
static/wordlists/dwyl/: prefix3.txt  words_a.txt  words_d.txt
static/wordlists/na_english/: words_a.txt  words_b.txt  words_c.txt  words_d.txt  words_e.txt  words_f.txt  words_g.txt  words_h.txt  words_i.txt  words_j.txt  (+16 more)
templates/: 404.html  base.html  board.html  index.html  rules.html  solve_history.html  solved.html  solver.html
templates/components/: board.html  board_options.html  solved_board.html  words_table.html
templates/errors/: 500.html
wordlists/dwyl/: words_t.txt  words_u.txt  words_z.txt
wordlists/free_scrabble/: free_scrabble.txt  words_b.txt  words_r.txt  words_u.txt  words_w.txt  words_x.txt
wordlists/na_english/: words_a.txt  words_j.txt  words_m.txt  words_t.txt
wordlists/scrabble_2019/: words_b.txt  words_d.txt  words_p.txt  words_t.txt  words_w.txt  words_z.txt
wordlists/sowpods/: sowpods.txt  words_d.txt  words_e.txt  words_n.txt  words_q.txt
wordlists/twl06/: words_e.txt  words_j.txt  words_m.txt  words_p.txt  words_z.txt
wordlists/wordnik_2021_07_29/: words_q.txt  words_w.txt  words_y.txt
(+90 files in other folders)
