[tool.poetry]
name = "boggler-flask"
version = "0.1.0"
description = "Boggle solver Flask app"
authors = ["Cameron Blankenbuehler <cameron.blankenbuehler@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.3"}
boggler = "^2.0.4"
certifi = "^2024.07.04"
jinja2 = "^3.1.5"
requests = "^2.32.2"
psycopg2-binary = "^2.9.9"
click = "^8.1.7"
charset-normalizer = "^3.3.2"
pytz = "^2024.1"
pyparsing = "^3.1.2"
kombu = "^5.3.7"
idna = "^3.7"
gunicorn = "^23.0.0"
websockets = "^12.0"
flask-debugtoolbar = "^0.15.1"
eventlet = "^0.36.1"
flask-socketio = "^5.3.6"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
ruff = "^0.4.10"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Ignore line-length violations
ignore = ["E501"]

[tool.ruff.format]
line-ending = "auto"
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

